# gambatte

./: .babelrc  .eslintrc  .gitignore  .npmignore  README  package-lock.json  package.json  webpack.config.js
.storybook/: webpack.config.js
lib/: gambatte.js  gambatte.wasm  index.js
lib/components/: gambatte.js
lib/controllers/: gamepad.js  keyboard.js
libgambatte/: build.sh  context.h  emscripten_cross_file.txt  interface.cpp  meson.build
libgambatte/src/file/: datafile.h  file.cpp
stories/: index.stories.js
